Remove report-related parts; Various updates